[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/images/Background.png" type="Texture" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://res/fonts/SmallFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/pause_2.png" type="Texture" id=5]
[ext_resource path="res://assets/images/pause.png" type="Texture" id=6]
[ext_resource path="res://assets/images/life.png" type="Texture" id=7]
[ext_resource path="res://assets/images/remain_bomb.png" type="Texture" id=8]
[ext_resource path="res://assets/audios/game_music.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/audios/use_bomb.wav" type="AudioStream" id=10]
[ext_resource path="res://res/fonts/LargeFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://res/themes/VBoxTheme.tres" type="Theme" id=12]
[ext_resource path="res://res/fonts/MiddleFont.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/audios/game_over.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/audios/out_porp.wav" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "RollBackground"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 852 ) ]
}

[sub_resource type="GDScript" id=5]
resource_name = "PauseButton"
script/source = "extends TextureButton

onready var pause_btn = [preload(\"res://assets/images/pause.png\"), preload(\"res://assets/images/pause_2.png\")]
onready var start_btn = [preload(\"res://assets/images/start.png\"), preload(\"res://assets/images/start_2.png\")]


func _on_PauseButton_pressed():
	get_tree().paused = !get_tree().paused
	
	if get_tree().paused:
		set_texture(start_btn)
	else:
		set_texture(pause_btn)

func set_texture(btns):
	texture_normal = btns[0]
	texture_hover = btns[1]
"

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0824738, 0.0898438, 0.0824738, 1 )

[sub_resource type="Animation" id=7]
resource_name = "GameOver"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.5 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/GameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/GameOver:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/GameOver:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/GameOver:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Score:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/PauseButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/PauseButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/Bomb:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/Life:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Score:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/PauseButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/PauseButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Bomb:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/Life:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Player:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 240, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Player:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 700, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player:can_move")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "StartGame"
length = 1.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("Player:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 950, -0.25, 0, 0.25, 0, 700, -1, -150, 0.25, 0 ),
"times": PoolRealArray( 0, 1.2 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("Player")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "game_start"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "game_start"
} ]
}
tracks/3/type = "animation"
tracks/3/path = NodePath("CanvasLayer/AnimationPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": PoolStringArray( "Show" ),
"times": PoolRealArray( 1.2 )
}
tracks/4/type = "animation"
tracks/4/path = NodePath("Background/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": PoolStringArray( "RollBackground" ),
"times": PoolRealArray( 1.2 )
}
tracks/5/type = "audio"
tracks/5/path = NodePath("OutPorp")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 240, 426 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="Background"]
position = Vector2( 0, -852 )
texture = ExtResource( 1 )
offset = Vector2( 240, 426 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
anims/RESET = SubResource( 1 )
anims/RollBackground = SubResource( 2 )

[node name="Missiles" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Supplies" type="Node2D" parent="."]

[node name="Timer" type="Node" parent="."]

[node name="EnamySmallAddTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="EnamyMiddleAddTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="EnamyLargeAddTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="SupplyTimer" type="Timer" parent="Timer"]
one_shot = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 700 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 10.0
margin_top = 10.0
margin_right = 39.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Score:0"
align = 1
valign = 1

[node name="PauseButton" type="TextureButton" parent="CanvasLayer/Control"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -42.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 45.0
grow_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
script = SubResource( 5 )

[node name="Life" type="HBoxContainer" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -50.0
margin_right = 75.0
margin_bottom = -10.0
grow_vertical = 0

[node name="LifeTexture" type="TextureRect" parent="CanvasLayer/Control/Life"]
margin_right = 75.0
margin_bottom = 52.0
texture = ExtResource( 7 )

[node name="LifeLabel" type="Label" parent="CanvasLayer/Control/Life"]
margin_left = 79.0
margin_right = 98.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "3"

[node name="Bomb" type="HBoxContainer" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -98.0
margin_top = -52.0
margin_right = -10.0
margin_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="BombLabel" type="Label" parent="CanvasLayer/Control/Bomb"]
margin_top = 2.0
margin_right = 47.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "3 ×"

[node name="BombTexture" type="TextureRect" parent="CanvasLayer/Control/Bomb"]
margin_left = 51.0
margin_right = 113.0
margin_bottom = 56.0
texture = ExtResource( 8 )

[node name="GameOver" type="Panel" parent="CanvasLayer/Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 240, 426 )
custom_styles/panel = SubResource( 6 )

[node name="UI" type="VBoxContainer" parent="CanvasLayer/Control/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_constants/separation = 60

[node name="Title" type="Label" parent="CanvasLayer/Control/GameOver/UI"]
margin_right = 443.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = ExtResource( 11 )
text = "Game Over"
align = 1
valign = 1

[node name="Score" type="Label" parent="CanvasLayer/Control/GameOver/UI"]
margin_top = 260.0
margin_right = 443.0
margin_bottom = 318.0
custom_fonts/font = ExtResource( 13 )
text = "Score:0"
valign = 1

[node name="BestScore" type="Label" parent="CanvasLayer/Control/GameOver/UI"]
margin_top = 378.0
margin_right = 443.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 13 )
text = "BestScore:0"
valign = 1

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/Control/GameOver/UI"]
margin_top = 496.0
margin_right = 443.0
margin_bottom = 740.0
theme = ExtResource( 12 )

[node name="PlayAgain" type="Button" parent="CanvasLayer/Control/GameOver/UI/Menu"]
margin_right = 443.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
text = "再玩一次"

[node name="BackMenu" type="Button" parent="CanvasLayer/Control/GameOver/UI/Menu"]
margin_top = 93.0
margin_right = 443.0
margin_bottom = 151.0
mouse_default_cursor_shape = 2
text = "返回主菜单"

[node name="Quit" type="Button" parent="CanvasLayer/Control/GameOver/UI/Menu"]
margin_top = 186.0
margin_right = 443.0
margin_bottom = 244.0
mouse_default_cursor_shape = 2
text = "退出"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/GameOver = SubResource( 7 )
anims/RESET = SubResource( 8 )
anims/Show = SubResource( 9 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "BGM"

[node name="UseBomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="OutPorp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "StartGame"
anims/RESET = SubResource( 3 )
anims/StartGame = SubResource( 4 )

[connection signal="timeout" from="Timer/EnamySmallAddTimer" to="." method="_on_EnamySmallAddTimer_timeout"]
[connection signal="timeout" from="Timer/EnamyMiddleAddTimer" to="." method="_on_EnamyMiddleAddTimer_timeout"]
[connection signal="timeout" from="Timer/EnamyLargeAddTimer" to="." method="_on_EnamyLargeAddTimer_timeout"]
[connection signal="timeout" from="Timer/SupplyTimer" to="." method="_on_SupplyTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/PauseButton" to="CanvasLayer/Control/PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/UI/Menu/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/UI/Menu/BackMenu" to="." method="_on_BackMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/GameOver/UI/Menu/Quit" to="." method="_on_Quit_pressed"]
